@@ -1,3 +1,10 @@
+2016-01-06  David Malcolm  <dmalcolm@redhat.com>
+
+	* c-parser.c (c_parser_unary_expression): For dereferences, build
+	a combined location before calling build_indirect_ref, so that
+	error reports cover the full range, manually updating the c_expr
+	src_range.
+
 2016-01-06  Marek Polacek  <polacek@redhat.com>
 
 	PR sanitizer/69099
